--- a/src/resource/views/partials/userSidebar.hbs
+++ b/src/resource/views/partials/userSidebar.hbs
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<script defer>
+<script>
   var index = '{{index}}'
 </script>
 <script src="/js/partials/userSidebar.js"></script>
