--- a/src/resource/views/users/allBrands.hbs
+++ b/src/resource/views/users/allBrands.hbs
@@ -7,10 +7,7 @@
   <div class="all-brands">
     {{#each holderBrands}}
       <div class="brand loading">
-        <a href="/all-brands/brand/{{this._id}}">
-          <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy"/>
-          {{this.name}}
-        </a>
+        <a><img loading="lazy"/></a>
       </div>
     {{/each}}
   </div>
