--- a/src/resource/views/users/detailProduct.hbs
+++ b/src/resource/views/users/detailProduct.hbs
@@ -1,9 +1,7 @@
 <div class="detail-product-container">
   <div class="table">
     <div class="image-box">
-      <div class="image">
-        <img loading="lazy"/>
-      </div>
+      <div class="image"><img loading="lazy"/></div>
     </div>
     
     <div class="details-box">
@@ -82,9 +80,7 @@
   </div>
 
   <div class="related-products">
-    <div class="title">
-      <a href="/all-products/{{productInfo.categories}}/{{productType}}" class="main-title"><b>SẢN PHẨM TƯƠNG ỨNG</b></a>
-    </div>
+    <div class="title"><span class="main-title"><b>SẢN PHẨM TƯƠNG ỨNG</b></span></div>
 
     <div class="products">
     {{#each holderRelatedProducts}}
