--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -89,8 +89,8 @@
   <div class="brands">
     <div class="inner">
       {{#each holderBrands}}
-      <a class="brand" href="/all-brands/brand/{{this._id}}" data-tippy-content="{{this.name}}">
-        <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy">
+      <a class="brand">
+        <img loading="lazy">
       </a>
       {{/each}}
     </div>
