--- a/src/resource/views/users/resetPassword.hbs
+++ b/src/resource/views/users/resetPassword.hbs
@@ -15,4 +15,4 @@
   var error = `{{error}}`
   importLinkCss('/css/user/resetPassword.css')
 </script>
-<script src="js/user/resetPassword.js"></script>
+<script src="/js/user/resetPassword.js"></script>
