--- a/src/public/css/user/detailBrand.css
+++ b/src/public/css/user/detailBrand.css
@@ -53,7 +53,7 @@
     width: 50%;
     height: 100%;
     margin: 10px;
-    .title {
+    #title {
       width: 100%;
       display: flex;
       flex-direction: column;
@@ -68,36 +68,13 @@
       h1 {
         color: #c73030;
       }
-      #product-price, #product-quantity {
-        background-color: #FFDFDF;
-        padding: 5px;
-        width: fit-content;
-        border-radius: 5px;
-        font-weight: bolder;
-      }
     }
-    .description {
+    #description {
       width: 100%;
       height: 40%;
       text-overflow: ellipsis; 
       overflow: hidden;
       word-wrap: break-word;
-    }
-    .quantity {
-      display: flex;
-      align-items: center;
-      justify-content: start;
-      width: 90%;
-      gap: 10px;
-      padding: 5px 10px;
-      margin-bottom: 5px;
-      p {
-        margin-block-start: 0px;
-        margin-block-end: 0px;
-        border: 1px solid #D1A6A6;
-        padding: 10px
-      };
-      i { cursor: pointer }
     }
   }
   .more-details {
