--- a/src/public/css/user/detailOrder.css
+++ b/src/public/css/user/detailOrder.css
@@ -16,6 +16,21 @@
     font-weight: bolder;
     height: 50px;
   }
+  table {
+    td.name-group {
+      display: flex;
+      gap: 5px;
+    }
+    a { 
+      display: flex;
+      align-items: center;
+      text-decoration: none; 
+      color: black;
+      padding-left: 0 !important;
+      border: none;
+      background-color: transparent !important
+    }
+  }
 }
 @media screen and (max-width: 700px) {
   table {
