--- a/src/public/css/user/ordersChecking.css
+++ b/src/public/css/user/ordersChecking.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: start;
   flex-direction: column;
-  form {
+  .checking {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,6 +14,18 @@
       width: 80%;
       height: 50px;
       text-align: center;
+    }
+    button.loading {
+      width: 50px;
+      height: 50px;
+      border: 5px solid #D1A6A6;
+      border-top-color: transparent;
+      border-bottom-color: transparent;
+      border-radius: 50%;
+      background-color: transparent;
+      color: transparent;
+      user-select: none;
+      animation: 1s reloader infinite linear;
     }
   }
   .order-process {
@@ -31,4 +43,7 @@
     }
   }
 }
-  
+
+@keyframes reloader {
+  to { transform: rotate(360deg)}
+} 
