--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -13,7 +13,12 @@
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
   <script src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
   <script src="/js/layouts/admin.js"></script>
-  <script src="/js/loadFile.js"></script>
+  <script src="/js/importLinkCss.js"></script>
+  <script src="/js/checkInput.js"></script>
+  <script src="/js/pushNotification.js"></script>
+  <script src="/js/sortAndFilter.js"></script>
+  <script src="/js/exportJs.js"></script>
+  <script src="/js/pagination.js"></script>
   <title>{{title}}</title>
 </head>
 <body>
