--- a/src/resource/views/layouts/empty.hbs
+++ b/src/resource/views/layouts/empty.hbs
@@ -14,7 +14,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
   <script src="/js/layouts/empty.js"></script>
-  <script src="/js/loadFile.js"></script>
+  <script src="/js/importLinkCss.js"></script>
+  <script src="/js/checkInput.js"></script>
+  <script src="/js/pushNotification.js"></script>
   <title>{{title}}</title>
 </head>
 <body>
