--- a/src/resource/views/users/detailOrder.hbs
+++ b/src/resource/views/users/detailOrder.hbs
@@ -1,65 +1,48 @@
 <div class="detail-order-container">
    <table>
-    <thead>
-      <tr><td colspan="2"> Thông tin chung </td></tr>
-    </thead>
-    <tr>
-      <td> Mã Đơn Hàng </td>
-      <td> {{orderInfo._id}} </td>
-    </tr>
-    <tr>
-      <td> Ngày Đặt Hàng </td>
-      <td> {{formatDate orderInfo.createdAt}} </td>
-    </tr>
-    <tr>
-      <td> Tên Khách Hàng </td>
-      <td> {{orderInfo.customerInfo.name}} </td>
-    </tr>
-    <tr>
-      <td> Số Điện Thoại </td>
-      <td> {{orderInfo.customerInfo.phone}} </td>
-    </tr>
-    <tr>
-      <td> Địa Chỉ Nhận Hàng </td>
-      <td> {{orderInfo.customerInfo.address}} </td>
-    </tr>
-    <tr>
-      <td> Ghi Chú </td>
-      <td> {{orderInfo.customerInfo.note}} </td>
-    </tr>
-    <tr>
-      <td> Tổng Tiền </td>
-      <td> {{formatNumber orderInfo.totalOrderPrice}} </td>
-    </tr>
-    <tr>
-      <td> Trạng Thái Đơn Hàng </td>
-      <td> {{formatStatus orderInfo.status}} </td>
-    </tr>
+      <thead>
+        <tr><td colspan="2"> Thông tin chung </td></tr>
+      </thead>
+      <tr>
+        <td>Mã Đơn Hàng </td><td id="id"></td>
+      </tr>
+      <tr>
+        <td>Ngày Đặt Hàng </td><td id="date"></td>
+      </tr>
+      <tr>
+        <td>Tên Khách Hàng </td><td id="name"></td>
+      </tr>
+      <tr>
+        <td>Số Điện Thoại </td><td id="phone"></td>
+      </tr>
+      <tr>
+        <td>Địa Chỉ Nhận Hàng </td><td id="address"></td>
+      </tr>
+      <tr>
+        <td>Ghi Chú </td><td id="note"></td>
+      </tr>
+      <tr>
+        <td>Tổng Tiền </td><td id="total-price"></td>
+      </tr>
+      <tr>
+        <td>Trạng Thái Đơn Hàng </td><td id="status"></td>
+      </tr>
    </table>
 
-  <table>
+  <table class="all-products">
     <thead>
       <tr>
-        <td>Sản Phẩm  </td>
-        <td>Đơn Giá   </td>
-        <td>S/L       </td>
-        <td>Tổng      </td>
+        <td>Sản Phẩm</td>
+        <td>Đơn Giá </td>
+        <td>S/L     </td>
+        <td>Tổng    </td>
       </tr>
     </thead>
-    <tbody>
-      {{#each orderInfo.products}}
-      <tr>
-        <td><p>{{this.name}}</p></td>
-        <td style="text-align: center">{{formatNumber this.price}}</td>
-        <td style="text-align: center">{{this.quantity}}</td>
-        <td style="text-align: center">{{formatNumber this.totalPrice}}</td>
-      </tr>
-      {{/each}}
-    </tbody>
+    <tbody></tbody>
   </table>
 </div>
 
 <script>
   importLinkCss('/css/user/detailOrder.css')
 </script>
-<script src="/js/user/detailOrder.js"></script>
+<script type="module" src="/js/user/detailOrder.js"></script>
