--- a/src/resource/views/users/detailRateOrder.hbs
+++ b/src/resource/views/users/detailRateOrder.hbs
@@ -1,82 +1,63 @@
 <div class="detail-rate-order-container">
-  <form id="form-1" method="post" action="/all-orders/order/rate/updated/{{orderInfo._id}}?_method=PUT">
-    <table>
-      <thead>
-        <tr><td colspan="2"> Thông tin chung </td></tr>
-      </thead>
-      <tr>
-        <td> Mã Đơn Hàng </td>
-        <td> {{orderInfo._id}} </td>
-      </tr>
-      <tr>
-        <td> Ngày Đặt Hàng </td>
-        <td> {{formatDate orderInfo.createdAt}} </td>
-      </tr>
-      <tr>
-        <td> Tên Khách Hàng </td>
-        <td> {{orderInfo.customerInfo.name}} </td>
-      </tr>
-      <tr>
-        <td> Số Điện Thoại </td>
-        <td> {{orderInfo.customerInfo.phone}} </td>
-      </tr>
-      <tr>
-        <td> Địa Chỉ Nhận Hàng </td>
-        <td> {{orderInfo.customerInfo.address}} </td>
-      </tr>
-      <tr>
-        <td> Ghi Chú </td>
-        <td> {{orderInfo.customerInfo.note}} </td>
-      </tr>
-      <tr>
-        <td> Tổng Tiền </td>
-        <td> {{formatNumber orderInfo.totalOrderPrice}} </td>
-      </tr>
-      <tr>
-        <td> Trạng Thái Đơn Hàng </td>
-        <td> {{formatStatus orderInfo.status}} </td>
-      </tr>
-    </table>
+  <table>
+    <thead>
+      <tr><td colspan="2"> Thông tin chung </td></tr>
+    </thead>
+    <tr>
+      <td>Mã Đơn Hàng </td><td id="id"></td>
+    </tr>
+    <tr>
+      <td>Ngày Đặt Hàng </td><td id="date"></td>
+    </tr>
+    <tr>
+      <td>Tên Khách Hàng </td><td id="name"></td>
+    </tr>
+    <tr>
+      <td>Số Điện Thoại </td><td id="phone"></td>
+    </tr>
+    <tr>
+      <td>Địa Chỉ Nhận Hàng </td><td id="address"></td>
+    </tr>
+    <tr>
+      <td>Ghi Chú </td><td id="note"></td>
+    </tr>
+    <tr>
+      <td>Tổng Tiền </td><td id="total-price"></td>
+    </tr>
+    <tr>
+      <td>Trạng Thái Đơn Hàng </td><td id="status"></td>
+    </tr>
+  </table>
 
-    <table>
-      <thead>
-        <tr>
-          <td>Sản Phẩm  </td>
-          <td>Đơn Giá   </td>
-          <td>S/L       </td>
-          <td>Tổng      </td>
-        </tr>
-      </thead>
-      <tbody>
-        {{#each orderInfo.products}}
-        <tr>
-          <td><p>{{this.name}}</p></td>
-          <td style="text-align: center">{{formatNumber this.price}}</td>
-          <td style="text-align: center">{{this.quantity}}</td>
-          <td style="text-align: center">{{formatNumber this.totalPrice}}</td>
-        </tr>
-        <tr>
-          <td colspan="4">
-            <input type="text" placeholder="Nhập đánh giá của bạn" id="productComment" name="productComment[]">
-            <input type="hidden" id="productId" name="productId[]" value="{{this.id}}">
-            <div class="rate-star">
-              <input type="hidden" id="productRate" name="productRate[]" value="0">
-              <i class="fi fi-ss-star"></i>
-              <i class="fi fi-ss-star"></i>
-              <i class="fi fi-ss-star"></i>
-              <i class="fi fi-ss-star"></i>
-              <i class="fi fi-ss-star"></i>
-              <span class="rate-score">0</span>
-              <span>/</span>
-              <span>5</span>
-            </div>
-          </td>
-        </tr>
-        {{/each}}
-      </tbody>
-    </table>
-  </form>
-
+  <table class="all-products">
+    <thead>
+      <tr>
+        <td>Sản Phẩm  </td>
+        <td>Đơn Giá   </td>
+        <td>S/L       </td>
+        <td>Tổng      </td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td colspan="4">
+          <input type="text" placeholder="Nhập đánh giá của bạn" id="productComment" name="productComment[]">
+          <div class="rate-star">
+            <input type="hidden" id="productRate" name="productRate[]" value="0">
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <span class="rate-score">0</span>
+            <span>/</span>
+            <span>5</span>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  
   <div class="button"><button type="submit">Gửi</button></div>
 </div>
 
@@ -85,4 +66,4 @@
   const successful = `{{successful}}`
   importLinkCss('/css/user/detailRateOrder.css')
 </script>
-<script src="/js/user/detailRateOrder.js"></script>
+<script type="module" src="/js/user/detailRateOrder.js"></script>
