--- a/src/resource/views/users/ordersChecking.hbs
+++ b/src/resource/views/users/ordersChecking.hbs
@@ -1,20 +1,15 @@
 <div class="order-checking-container">
-    <form id="form-5">
+    <div class="checking">
         <h1>Hãy Nhập Mã Đơn Để Kiểm Tra Đơn Hàng Của Bạn Nhé !</h1>
         <input type="text" placeholder="Nhập Mã Đơn Hàng">
         <div class="button">
             <button type="submit">Kiểm Tra</button>
         </div>
         <span class="error-message"></span>
-    </form>
+    </div>
 </div>
 
 <script>
-    var orderInfo       = `{{orderInfo}}`
-    var orderCreatedAt  = `{{formatDate orderInfo.createdAt}}`
-    var customerName    = `{{orderInfo.customerInfo.name}}`
-    var orderStatus     = `{{orderInfo.status}}`
-    var orderId         = `{{orderInfo._id}}`
     importLinkCss('/css/user/ordersChecking.css')
 </script>
 <script src="/js/user/ordersChecking.js"></script>
