--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -67,7 +67,8 @@
   <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" class="dropdown-avatar" alt="loading" data-tippy-content="Đăng nhập/Đăng xuất"/>
 </div>
 
-<div class="avatar-menu"></div>
-<form method="get" action="/home/search" class="search-form"></form>
+<input type="text" id="search-input" placeholder="Nhập mã hàng, tên sản phẩm để tìm kiếm" style="display: none;">
+
+<div class="avatar-menu" style="display: none"></div>
 
 <script src="/js/partials/userHeader.js"></script>
