--- a/src/resource/views/users/ordersChecking.hbs
+++ b/src/resource/views/users/ordersChecking.hbs
@@ -12,4 +12,4 @@
 <script>
     importLinkCss('/css/user/ordersChecking.css')
 </script>
-<script src="/js/user/ordersChecking.js"></script>
+<script type="module" src="/js/user/ordersChecking.js"></script>
