--- a/src/public/css/user/home.css
+++ b/src/public/css/user/home.css
@@ -1,5 +1,5 @@
 .flash-deal-board, .products-board {
-  width: 100%;
+  /* width: 100%; */
   overflow: hidden;
   display: flex;
   flex-direction: column;
