--- a/src/resource/views/admin/all/brand.hbs
+++ b/src/resource/views/admin/all/brand.hbs
@@ -93,9 +93,4 @@
   <span class="pagination"></span>
 </div>
 
-<script defer>
-  const successful = '{{successful}}'
-  const totalBrand = '{{totalBrand}}'
-  const currentPage = '{{currentPage}}'
-  loadFile('/js/admin/all/brand.js')
-</script>
+<script src="/js/admin/all/brand.js"></script>
