--- a/src/resource/views/admin/all/chat.hbs
+++ b/src/resource/views/admin/all/chat.hbs
@@ -34,7 +34,4 @@
   </div>
 </div>
 
-<script>
-  const uid = `{{uid}}`
-  loadFile('/js/admin/all/chat.js')
-</script>
+<script src="/js/admin/all/chat.js"></script>
