--- a/src/resource/views/admin/all/employee.hbs
+++ b/src/resource/views/admin/all/employee.hbs
@@ -80,9 +80,4 @@
   <span class="pagination"></span>
 </div>
 
-<script>
-  const successful = '{{successful}}'
-  const totalEmployee = '{{totalEmployee}}'
-  const currentPage = '{{currentPage}}'
-  loadFile('/js/admin/all/employee.js')
-</script>
+<script src="/js/admin/all/employee.js"></script>
