--- a/src/resource/views/admin/all/product.hbs
+++ b/src/resource/views/admin/all/product.hbs
@@ -110,9 +110,4 @@
 
 <form style="display: none;" name="delete-form" method="post"></form>
 
-<script>
-  const successful = '{{successful}}'
-  const totalProduct = '{{totalProduct}}'
-  const currentPage = '{{currentPage}}'
-  loadFile('/js/admin/all/product.js')
-</script>
+<script src="/js/admin/all/product.js"></script>
