--- a/src/resource/views/admin/all/purchase.hbs
+++ b/src/resource/views/admin/all/purchase.hbs
@@ -73,9 +73,4 @@
   </span>
 </div>
 
-<script>
-  const successful = '{{successful}}'
-  const totalPurchase = '{{totalPurchase}}'
-  const currentPage = '{{currentPage}}'
-  loadFile('/js/admin/all/purchase.js')
-</script>
+<script src="/js/admin/all/purchase.js"></script>
