--- a/src/resource/views/admin/all/store.hbs
+++ b/src/resource/views/admin/all/store.hbs
@@ -65,9 +65,4 @@
   <span class="pagination"></span>
 </div>
 
-<script>
-  const successful = '{{successful}}'
-  const totalStore = '{{totalStore}}'
-  const currentPage = '{{currentPage}}'
-  loadFile('/js/admin/all/store.js')
-</script>
+<script src="/js/admin/all/store.js"></script>
