--- a/src/resource/views/admin/all/supplier.hbs
+++ b/src/resource/views/admin/all/supplier.hbs
@@ -64,9 +64,4 @@
   <span class="pagination"></span>
 </div>
 
-<script>
-  const successful = '{{successful}}'
-  const totalSupplier = '{{totalSupplier}}'
-  const currentPage = '{{currentPage}}'
-  loadFile('/js/admin/all/supplier.js')
-</script>
+<script src="/js/admin/all/supplier.js"></script>
