--- a/src/resource/views/admin/all/trash.hbs
+++ b/src/resource/views/admin/all/trash.hbs
@@ -65,9 +65,4 @@
 <form style="display: none" name="delete-form" method="post"></form>
 <form style="display: none" name="restore-form" method="get"></form>
 
-<script>
-  const successful = '{{successful}}'
-  const totalDeletedProduct = '{{totalDeletedProduct}}'
-  const currentPage = '{{currentPage}}'
-  loadFile('/js/admin/all/trash.js')
-</script>
+<script src="/js/admin/all/trash.js"></script>
