--- a/src/resource/views/admin/create/brand.hbs
+++ b/src/resource/views/admin/create/brand.hbs
@@ -31,6 +31,4 @@
   </form>
 </div>
 
-<script>
-  loadFile('/js/admin/create/brand.js')
-</script>
+<script src="/js/admin/create/brand.js"></script>
