--- a/src/resource/views/admin/create/employee.hbs
+++ b/src/resource/views/admin/create/employee.hbs
@@ -64,7 +64,4 @@
   </form>
 </div>
 
-<script>
-  const successful = `{{successful}}`
-  loadFile('/js/admin/create/employee.js')
-</script>
+<script src="/js/admin/create/employee.js"></script>
