--- a/src/resource/views/admin/create/purchase.hbs
+++ b/src/resource/views/admin/create/purchase.hbs
@@ -70,6 +70,4 @@
   </form>
 </div>
 
-<script>
-  loadFile('/js/admin/create/purchase.js')
-</script>
+<script src="/js/admin/create/purchase.js"></script>
