--- a/src/resource/views/admin/create/store.hbs
+++ b/src/resource/views/admin/create/store.hbs
@@ -26,6 +26,4 @@
   </form>
 </div>
 
-<script>
-  loadFile('/js/admin/create/store.js')
-</script>
+<script src="/js/admin/create/store.js"></script>
