--- a/src/resource/views/admin/create/supplier.hbs
+++ b/src/resource/views/admin/create/supplier.hbs
@@ -32,7 +32,4 @@
   </form>
 </div>
 
-<script>
-  const successful = `{{successful}}`
-  loadFile('/js/admin/create/supplier.js')
-</script>
+<script src="/js/admin/create/supplier.js"></script>
