--- a/src/resource/views/admin/detail/brand.hbs
+++ b/src/resource/views/admin/detail/brand.hbs
@@ -56,7 +56,4 @@
   </form>
 </div>
 
-<script>
-  var successful = '{{successful}}'
-  loadFile('/js/admin/detail/brand.js')
-</script>
+<script src="/js/admin/detail/brand.js"></script>
