--- a/src/resource/views/admin/detail/customer.hbs
+++ b/src/resource/views/admin/detail/customer.hbs
@@ -75,8 +75,4 @@
   </form>
 </div>
 
-<script>
-  var gender = '{{customerInfo.gender}}'
-  var successful = '{{successful}}'
-  loadFile('/js/admin/detail/customer.js')
-</script>
+<script src="/js/admin/detail/customer.js"></script>
