--- a/src/resource/views/admin/detail/employee.hbs
+++ b/src/resource/views/admin/detail/employee.hbs
@@ -61,10 +61,4 @@
   </form>
 </div>
 
-<script>
-  var role      = '{{employeeInfo.role}}'
-  var gender    = '{{employeeInfo.gender}}'
-  var storeCode = '{{employeeInfo.storeCode}}'
-  var successful= '{{successful}}'
-  loadFile('/js/admin/detail/employee.js')
-</script>
+<script src="/js/admin/detail/employee.js"></script>
