--- a/src/resource/views/admin/detail/order.hbs
+++ b/src/resource/views/admin/detail/order.hbs
@@ -82,9 +82,4 @@
   </form>     
 </div>
 
-<script>
-  var paymentMethod = '{{orderInfo.paymentMethod}}'
-  var orderStatus = '{{orderInfo.status}}'
-  var successful = '{{successful}}'
-  loadFile('/js/admin/detail/order.js')
-</script>
+<script src="/js/admin/detail/order.js"></script>
