--- a/src/resource/views/admin/detail/product.hbs
+++ b/src/resource/views/admin/detail/product.hbs
@@ -100,12 +100,4 @@
   </form>
 </div>
 
-<script>
-  var productCategories  = '{{productInfo.categories}}'
-  var productStatus      = '{{productInfo.status}}'
-  var productBrand       = '{{productInfo.brand}}'
-  var productSkincare    = '{{productInfo.skincare}}'
-  var productMakeup      = '{{productInfo.makeup}}'
-  var successful         = '{{successful}}'
-  loadFile('/js/admin/detail/product.js')
-</script>
+<script src="/js/admin/detail/product.js"></script>
