--- a/src/resource/views/admin/detail/profile.hbs
+++ b/src/resource/views/admin/detail/profile.hbs
@@ -33,8 +33,4 @@
   </form>
 </div>   
 
-<script>
-  var gender = '{{userInfo.gender}}'
-  var successful = '{{successful}}'
-  loadFile('/js/admin/detail/profile.js')
-</script>
+<script src="/js/admin/detail/profile.js"></script>
