--- a/src/resource/views/admin/detail/purchase.hbs
+++ b/src/resource/views/admin/detail/purchase.hbs
@@ -62,7 +62,4 @@
   </form>
 </div>
 
-<script>
-  var successful = '{{successful}}'
-  loadFile('/js/admin/detail/purchase.js')
-</script>
+<script src="/js/admin/detail/purchase.js"></script>
