--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -19,6 +19,7 @@
   <script src="/js/sortAndFilter.js"></script>
   <script src="/js/exportJs.js"></script>
   <script src="/js/pagination.js"></script>
+  <script src="/js/format.js"></script>
   <title>{{title}}</title>
 </head>
 <body>
