--- a/src/resource/views/users/detailOrder.hbs
+++ b/src/resource/views/users/detailOrder.hbs
@@ -42,7 +42,4 @@
   </table>
 </div>
 
-<script>
-  importLinkCss('/css/user/detailOrder.css')
-</script>
-<script type="module" src="/js/user/detailOrder.js"></script>
+<script src="/js/user/detailOrder.js"></script>
