--- a/src/resource/views/users/detailRateOrder.hbs
+++ b/src/resource/views/users/detailRateOrder.hbs
@@ -44,8 +44,4 @@
   <div class="button"><button type="submit">Gửi</button></div>
 </div>
 
-<script>
-  const successful = `{{successful}}`
-  importLinkCss('/css/user/detailRateOrder.css')
-</script>
-<script type="module" src="/js/user/detailRateOrder.js"></script>
+<script src="/js/user/detailRateOrder.js"></script>
