--- a/src/public/css/empty/signIn.css
+++ b/src/public/css/empty/signIn.css
@@ -15,7 +15,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 80%;
     img { width: 50% };
-    .form-input {
+    .form {
       width: 50%;
       padding: 5px;
       .form-title {
@@ -140,4 +140,8 @@
       padding: 5px;
     }
   }
+}
+
+@keyframes reloader {
+  to { transform: rotate(360deg)}
 }
