--- a/src/public/css/user/body.css
+++ b/src/public/css/user/body.css
@@ -130,8 +130,8 @@ div.products {
   display: grid;
   grid-template-columns: repeat(5, minmax(min(11.25rem, 100%), 1fr));
   scroll-snap-type: x mandatory;
-  overflow-x: scroll;
-  max-width: 1300px;
+  overflow-x: auto;
+  max-width: 100%;
   border-radius: 20px;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
@@ -147,6 +147,7 @@ div.products {
     margin-block-end: 5px;
   }
   .product {
+    /* scroll-snap-align: start; */
     position: relative;
     background-color: white; 
     min-height: 350px;
@@ -272,6 +273,18 @@ button {
   border-radius: 5px;
   cursor: pointer;
 }
+button.loading {
+  width: 50px !important;
+  height: 50px !important;
+  border: 5px solid #D1A6A6 !important;
+  border-top-color: transparent !important;
+  border-bottom-color: transparent !important;
+  border-radius: 50% !important;
+  background-color: transparent !important;
+  color: transparent !important;
+  user-select: none !important;
+  animation: 1s reloader infinite linear;
+}
 button:hover {
   background-color: #D1A6A6;
   color: white;
@@ -332,4 +345,8 @@ div.clearfix::after {
   0% { background-color: #ffffff; }
   50% { background-color: #eeeeee; }
   100% { background-color: #ffffff; }
+}
+
+@keyframes reloader {
+  to { transform: rotate(360deg)}
 }
