--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -79,9 +79,4 @@
   <span class="pagination"></span>
 </div>
 
-<script>
-  const successful = '{{successful}}'
-  const totalCustomer = '{{totalCustomer}}'
-  const currentPage = '{{currentPage}}'
-  loadFile('/js/admin/all/customer.js')
-</script>
+<script src="/js/admin/all/customer.js"></script>
