--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -80,9 +80,4 @@
   <span class="pagination"></span>
 </div>
 
-<script>
-  const successful = '{{successful}}'
-  const totalOrder = '{{totalOrder}}'
-  const currentPage = '{{currentPage}}'
-  loadFile('/js/admin/all/order.js')
-</script>
+<script src="/js/admin/all/order.js"></script>
