--- a/src/resource/views/admin/create/customer.hbs
+++ b/src/resource/views/admin/create/customer.hbs
@@ -44,6 +44,4 @@
   </form>
 </div>
 
-<script>
-  loadFile('/js/admin/create/customer.js')
-</script>
+<script src="/js/admin/create/customer.js"></script>
