--- a/src/resource/views/admin/create/order.hbs
+++ b/src/resource/views/admin/create/order.hbs
@@ -90,6 +90,4 @@
   </form>
 </div>
 
-<script>
-  loadFile('/js/admin/create/order.js')
-</script>
+<script src="/js/admin/create/order.js"></script>
