--- a/src/resource/views/admin/create/product.hbs
+++ b/src/resource/views/admin/create/product.hbs
@@ -100,6 +100,4 @@
   </form>
 </div>
 
-<script>
-  loadFile('/js/admin/create/product.js')
-</script>
+<script src="/js/admin/create/product.js"></script>
