--- a/src/resource/views/admin/detail/store.hbs
+++ b/src/resource/views/admin/detail/store.hbs
@@ -54,7 +54,4 @@
   </form>
 </div>
 
-<script>
-  var successful = '{{successful}}'
-  loadFile('/js/admin/detail/store.js')
-</script>
+<script src="/js/admin/detail/store.js"></script>
