--- a/src/resource/views/admin/resetPassword.hbs
+++ b/src/resource/views/admin/resetPassword.hbs
@@ -11,7 +11,4 @@
   </form>
 </div>
 
-<script>
-  var error = `{{error}}`
-  loadFile('/js/admin/resetPassword.js')
-</script>
+<script src="/js/admin/resetPassword.js"></script>
