--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -20,6 +20,7 @@
   <script src="/js/checkInput.js"></script>
   <script src="/js/pushNotification.js"></script>
   <script src="/js/sortAndFilter.js"></script>
+  <script src="/js/format.js"></script>
   <title>{{title}}</title>
 </head>
 <body>
