--- a/src/resource/views/users/ordersChecking.hbs
+++ b/src/resource/views/users/ordersChecking.hbs
@@ -1,7 +1,7 @@
 <div class="order-checking-container">
     <div class="checking">
         <h1>Hãy Nhập Mã Đơn Để Kiểm Tra Đơn Hàng Của Bạn Nhé !</h1>
-        <input type="text" placeholder="Nhập Mã Đơn Hàng">
+        <input id="order-checking" type="text" placeholder="Nhập Mã Đơn Hàng">
         <div class="button">
             <button type="submit">Kiểm Tra</button>
         </div>
@@ -9,7 +9,4 @@
     </div>
 </div>
 
-<script>
-    importLinkCss('/css/user/ordersChecking.css')
-</script>
 <script type="module" src="/js/user/ordersChecking.js"></script>
