--- a/src/resource/views/users/profileInfo.hbs
+++ b/src/resource/views/users/profileInfo.hbs
@@ -17,7 +17,4 @@
   </div>
 </div>   
 
-<script>
-  importLinkCss('/css/user/profile.css')
-</script>
-<script type="module" src="/js/user/profileInfo.js"></script>
+<script src="/js/user/profileInfo.js"></script>
