--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -1,26 +1,20 @@
 <div class="sign-up-container">
   <div class="sign-up-form">
-  <img src="https://res.cloudinary.com/bunny-store/image/upload/v1737559909/web-img/377cb88c-c18e-40e4-b653-fc30a1dad316.png" loading="lazy">    <div class="form-input" loading="lazy">
+    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1737559909/web-img/377cb88c-c18e-40e4-b653-fc30a1dad316.png" loading="lazy">    
+    <div class="form">
       <p class="form-title">Đăng ký</p>
-      <form id="form-1" method="post" action="/authentication/creating-account">
-        <div class="form-group">
-          <input type="text" class="form-control" id="name" name="name" placeholder="Họ Tên">
-          <span class="form-message"></span>
-        </div>
-
+      <div class="form-input">
         <div class="form-group">
           <input type="text" class="form-control" id="email" name="email" placeholder="Email">
-          <span class="form-message"></span>
         </div>
 
-        <div class="form-group">
-          <input type="password" class="form-control" id="password" name="password" placeholder="Mật Khẩu">
-          <span class="form-message"></span> 
+        <div class="form-group code" style="display: none">
         </div>
 
-        <div class="form-group">
-          <input type="password" class="form-control" id="password-confirm" name="password-confirm" placeholder="Xác Nhận Mật Khẩu">
-          <span class="form-message"></span>
+        <div class="form-group name" style="display: none">
+        </div>
+
+        <div class="form-group password" style="display: none">
         </div>
 
         <div class="form-group">
@@ -28,7 +22,7 @@
         </div>
 
         <div class="form-action">
-          <button title="submit" type="submit">Đăng Ký</button>
+          <button class="submit-email">Đăng Ký Email</button>
         </div>
 
         <div class="sign-in">
@@ -36,13 +30,9 @@
           <a href="/authentication/sign-in"><p style="color: red; text-decoration:underline">Đăng nhập ngay thôi</p></a>
           <a href="/home"><p style="color: red; text-decoration:underline">Tiếp tục Shopping</p></a>
         </div>
-      </form>
+      </div>
     </div>
   </div>
 </div>
 
-<script>
-  var error = `{{error}}`
-  importLinkCss('/css/empty/signIn.css')
-</script>
 <script src="/js/user/signUp.js"></script>
