--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -48,6 +48,7 @@
       <thead>
         <tr>
           <td style="width: 5% ">STT           </td>
+          <td class="loading" style="display: none;"></td>
           <td style="width: 15%">Mã Khách hàng </td>
           <td style="width: 15%">Tên Khách Hàng</td>
           <td style="width: 25%">Địa chỉ       </td>
@@ -59,8 +60,9 @@
 
       <tbody>
         {{#each holderData}}
-          <tr class="loading">
+          <tr>
             <td></td>
+            <td class="loading"></td>
             <td></td>
             <td></td>
             <td></td>
